--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
